# dat-unpacker

./: .editorconfig  .gitignore  .travis.yml  Archive.cpp  Archive.h  ArchiveEntry.cpp  ArchiveEntry.h  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DatFile.cpp  DatFile.h  DatFileItem.cpp  DatFileItem.h  Exception.cpp  Exception.h  LICENSE  LICENSE.txt  LZSS.cpp  LZSS.h  README.md  datfile.cbp  main.cpp  vcpkg.json
.github/workflows/: build.yaml
debian/: changelog  control
src/: Archive.cpp  Archive.h  ArchiveEntry.cpp  ArchiveEntry.h  Arguments.h  ArgumentsChecker.cpp  ArgumentsChecker.h  ArgumentsParser.cpp  ArgumentsParser.h  DatFile.cpp  DatFile.h  DatFileItem.cpp  DatFileItem.h  DatFileUnpacker.cpp  DatFileUnpacker.h  Exception.cpp  Exception.h  FileSystemHelper.cpp  FileSystemHelper.h  Format.h  LZSS.cpp  LZSS.h  defines.h  main.cpp
